--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,49 @@ body {
  *      CODE START
  *======================*/
 
+body > div {
+    position: relative;
+}
+
 body > div > img[src="./assets/svgs/psp-foreground.svg"] {
     width: 100%;
     height: 100%;
+}
+
+body > div > div {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: grid;
+    grid-template-columns: 0.2778fr 1fr 0.2778fr;
+    grid-template-rows: 0.06897fr 0.03448fr 1fr 0.15fr 0.03448fr;
+}
+
+body > div > div > div:first-child {
+    border: red 2px solid;
+    grid-row-start: 3;
+    grid-column-start: 1;
+    grid-column-end: 1;
+}
+
+body > div > div > div:nth-child(2) {
+    border: blue 2px solid;
+    background-color: grey;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+body > div > div > div:nth-child(3) {
+    border: green 2px solid;
+    grid-row-start: 3;
+    grid-column-start: 3;
+    grid-column-end: 3;
+}
+
+body > div > div > div:last-child {
+    border: yellow 2px solid;
+    grid-row-start: 4;
+    grid-column-start: 2;
 }
