--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,10 @@ html {
 }
 
 /* custom properties */
-/* TBA */
+:root {
+    /* basic colors */
+    --psp-foreground: #1d1d22;
+}
 
 body {
     min-height: 100%;
@@ -33,6 +36,7 @@ body > div > img[src="./assets/svgs/psp-foreground.svg"] {
     height: 100%;
 }
 
+/* div that holds the main grid */
 body > div > div {
     width: 100%;
     height: 100%;
@@ -51,7 +55,6 @@ body > div > div > div:first-child {
 
 body > div > div > div:nth-child(2) {
     border: blue 2px solid;
-    background-color: grey;
     grid-row-start: 2;
     grid-row-end: 4;
     grid-column-start: 2;
@@ -70,3 +73,71 @@ body > div > div > div:last-child {
     grid-row-start: 4;
     grid-column-start: 2;
 }
+
+/* styling for inputs on the right: analog */
+label {
+    position: relative;
+}
+
+input {
+    opacity: 0;
+    position: absolute;
+    top: 7px;
+    left: 7px;
+    transform: scale(1.8);
+}
+
+input,
+label {
+    /* display: inline-block; */
+    /* margin: 5px; */
+    cursor: pointer;
+}
+
+body > div > div > div:nth-child(3) label:before {
+    color: white;
+    display: inline-block;
+    vertical-align: middle;
+    width: 30px;
+    height: 30px;
+    padding: 2px;
+    margin-right: 10px;
+    text-align: center;
+    border-radius: 100%;
+    /* source for button styling: https://stackoverflow.com/questions/38377062/how-to-make-html-button-look-pressed-in-using-css */
+    background-color: var(--psp-foreground);
+    outline: none;
+    -webkit-box-shadow: inset 0px 0px 5px #000000;
+    -moz-box-shadow: inset 0px 0px 5px #000000;
+    box-shadow: inset 0px 0px 5px #000000;
+}
+
+/* set icon */
+/* TODO: add color to 'content' */
+/* TODO: scale 'content' */
+/* TODO: position buttons */
+/* TODO: make button appear pressed */
+body > div > div > div:nth-child(3) label:first-child:before {
+    content: "△";
+}
+
+body > div > div > div:nth-child(3) label:nth-child(2):before {
+    content: "□";
+}
+
+body > div > div > div:nth-child(3) label:nth-child(3):before {
+    content: "⨯";
+}
+
+body > div > div > div:nth-child(3) label:last-child:before {
+    content: "○";
+}
+
+/* functionality analog-side */
+/* TODO: add styling for pressed button */
+/* TODO: if power on checkbox checked, change screen styling: work with one element, no classes ofc.  */
+/* body > div > div > div:nth-child(3):has(input:checked) label:before {
+    background-color: purple;
+} */
+
+/* TODO: add 'screen off' styling */
