--- a/styles/styles.css
+++ b/styles/styles.css
@@ -85,7 +85,7 @@ body > div > div > div:nth-child(3) {
 
     /* position analog side main elements */
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 0.5fr 1fr 0.65fr;
 }
 
@@ -105,15 +105,6 @@ label {
     justify-self: center;
 }
 /* ! THEN ADD THE BORDER CIRCLE AS A :BEFORE THATS POSITIONED ABSOLUTELY TO THE DIV ALL THE BUTTONS ARE IN: SIZE THIS HOW YOU WANT */
-
-input {
-    opacity: 0;
-    position: absolute;
-    top: 7px;
-    left: 7px;
-    transform: scale(1.8);
-}
-
 input,
 label {
     /* display: inline-block; */
@@ -121,7 +112,15 @@ label {
     cursor: pointer;
 }
 
-body > div > div > div:nth-child(3) > div > label:before {
+body > div > div > div:nth-child(3) > div:nth-child(2) > label > input {
+    opacity: 0;
+    position: absolute;
+    top: 7px;
+    left: 7px;
+    transform: scale(1.8);
+}
+
+body > div > div > div:nth-child(3) > div:nth-child(2) > label:before {
     color: white;
     display: inline-block;
     vertical-align: middle;
@@ -144,19 +143,39 @@ body > div > div > div:nth-child(3) > div > label:before {
 /* TODO: scale 'content' */
 /* TODO: make button appear pressed */
 /* ?: does the current default styling look more pressed..? */
-body > div > div > div:nth-child(3) > div > label:first-child:before {
+body
+    > div
+    > div
+    > div:nth-child(3)
+    > div:nth-child(2)
+    > label:first-child:before {
     content: "△";
 }
 
-body > div > div > div:nth-child(3) > div > label:nth-child(2):before {
+body
+    > div
+    > div
+    > div:nth-child(3)
+    > div:nth-child(2)
+    > label:nth-child(2):before {
     content: "□";
 }
 
-body > div > div > div:nth-child(3) > div > label:nth-child(3):before {
+body
+    > div
+    > div
+    > div:nth-child(3)
+    > div:nth-child(2)
+    > label:nth-child(3):before {
     content: "⨯";
 }
 
-body > div > div > div:nth-child(3) > div > label:last-child:before {
+body
+    > div
+    > div
+    > div:nth-child(3)
+    > div:nth-child(2)
+    > label:last-child:before {
     content: "○";
 }
 
@@ -175,10 +194,9 @@ body > div > div > div:nth-child(3) > div:nth-child(2) {
     /* ! TURN THIS BACK ON */
     /* border: 1.5px solid black;
     border-radius: 100%; */
-    /* ! the problem is more so that the buttons arent centered in their little grid boxes. */
     background: blue;
-    height: 100%;
-    width: 70%;
+    /* height: 100%;
+    width: 70%; */
     margin-inline: auto;
     grid-column-start: 1;
     grid-column-end: 4;
@@ -191,9 +209,14 @@ body > div > div > div:nth-child(3) > div:nth-child(2) {
 }
 
 body > div > div > div:nth-child(3) > div:last-child {
-    background: yellow;
+    background: rgba(255, 255, 0, 0.423);
     height: 100%;
     width: 100%;
+
+    /* grid for power/hold */
+    display: grid;
+    grid-template-rows: 0.35fr 1fr 1fr 0.35fr;
+    grid-template-columns: 1fr 1fr 1fr;
 
     grid-column-start: 1;
     grid-column-end: 4;
