--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,7 +111,7 @@ body > div > div > div:last-child {
 /* styling for inputs on the LEFT: D-PAD */
 /* TODO: the above */
 body > div > div > div:first-child > div:nth-child(2) {
-    background: red;
+    background: rgba(25, 0, 255, 0.119);
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 2;
@@ -131,13 +131,51 @@ body > div > div > div:first-child > div:nth-child(2) {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
 
+    label:first-child {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 1;
+    }
+
+    label:nth-child(2) {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        transform: rotate(270deg);
+
+    }
+
+    label:nth-child(3) {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 3;
+        transform: rotate(180deg);
+    }
+
+    label:last-child {
+        grid-column-start: 3;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        transform: rotate(90deg);
+    }
+
     /* why did i not know you could apply clip-paths to input fields..? :).. */
-    input {
-        content: "";
-        clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-        height: 20px;
-        width: 20px;
-        background: blue;
+    label::before {
+        content: "△";
+        color: white;
+        display: inline-block;
+        vertical-align: middle;
+        /* TODO: make sure this width scales */
+        width: 35px;
+        height: 35px;
+        text-align: center;
+        border-radius: 100%;
+        /* source for button styling: https://stackoverflow.com/questions/38377062/how-to-make-html-button-look-pressed-in-using-css */
+        background-color: var(--psp-foreground);
+        outline: none;
+        -webkit-box-shadow: inset 0px 0px 5px var(--button-shading);
+        -moz-box-shadow: inset 0px 0px 5px var(--button-shading);
+        box-shadow: inset 0px 0px 5px var(--button-shading);
     }
 }
 
@@ -153,7 +191,8 @@ label {
     cursor: pointer;
 }
 
-body > div > div > div:nth-child(3) > div:nth-child(2) > label > input {
+body > div > div > div:nth-child(3) > div:nth-child(2) > label > input,
+body > div > div > div:first-child > div:nth-child(2) > label > input {
     opacity: 0;
     position: absolute;
     top: 7px;
